--- a/html/css/layout1.css
+++ b/html/css/layout1.css
@@ -36,3 +36,10 @@
     right: 50%;
     width: 150px;
 }
+
+input[type=input] {
+    padding: 10px;
+    font-size: 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
