--- a/html/css/cart-hw.css
+++ b/html/css/cart-hw.css
@@ -79,3 +79,42 @@ tr {
     font-size: 15px;
     color: white;
 }
+
+.bnt {
+    padding: 15px;
+    font-size: 20px;
+    border: none;
+    border-radius: 10px;
+    background-color: coral;
+    color: white;
+    cursor: pointer;
+}
+
+.bnt:hover {
+    background-color: chocolate;
+}
+.bnt:focus {
+    background-color: gray;
+}
+.bnt:active {
+    background-color: brown;
+}
+
+.input-test {
+    font-size: 20px;
+}
+.input-test:focus {
+    border: 2px solid red;
+}
+
+.custom-link {
+    text-decoration: none;
+}
+
+.custom-link:link {
+    color: aqua;
+}
+
+.custom-link:visited{
+    color: #41546f;
+}
